force-app/main/default/objects/ServiceAppointment/fields/FSK_Add_Asset_to_Maintenance_Plan__c.field-meta.xml
<CustomField>
        <fullName>FSK_Add_Asset_to_Maintenance_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Add the installed Asset to the account maintenance plan upon completion</inlineHelpText>
        <label>Add Asset to Account Maintenance Plan</label>
        <type>Checkbox</type>
</CustomField>