force-app/main/default/objects/ServiceAppointment/fields/FSK_Planned_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>FSK_Planned_Scheduled_Start__c</fullName>
    <description>This field stores the original Scheduled Start Time</description>
    <label>Planned Scheduled Start</label>
    <type>DateTime</type>
</CustomField>