force-app/main/default/objects/ServiceAppointment/fields/FSK_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>FSK_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>FSK_Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>