force-app/main/default/objects/ServiceAppointment/fields/FSK_Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>FSK_Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>