force-app/main/default/objects/ServiceAppointment/fields/Scheduled_Time_TZ__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Time_TZ__c</fullName>
    <label>Scheduled in Local Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>